--- a/templates/display.html
+++ b/templates/display.html
@@ -20,11 +20,11 @@
         
             <script>
                 function redirectToDelete(todoId) {
-                    window.location.href = `{{ url_for('delete_todo', todo_id='') }}${todoId}`;
+                    window.location.href = `{{ url_for('delete_todo', todo_id=todo._id) }}`;
                 }
 
                 function redirectToEdit(todoId) {
-                    const editUrl = `{{ url_for('edit_todo', todo_id='') }}${todoId}`;
+                    const editUrl = `{{ url_for('edit_todo', todo_id=todo._id) }}`;
                     window.location.href = editUrl;
                 }
             </script>
