--- a/templates/main.html
+++ b/templates/main.html
@@ -12,6 +12,7 @@
             <header>
                 <h1>To-Do List App</h1>
             </header>
+            <a href="{{ url_for('login') }}">Login</a>
             <nav>
                 <a href="{{ url_for('search') }}">Search</a>
                 <a href="{{ url_for('view_all') }}">Check All Tasks</a>
