--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up - To-Do List App</title>
-    <!--link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" /-->
-    <link rel="stylesheet" href="../static/css/style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 <body>
     <div class="signup">
