--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: #F2DFD7;
+    background-color: #ffffff;
     color: #333333;
     display: flex;
     justify-content: center;
