--- a/templates/display.html
+++ b/templates/display.html
@@ -19,18 +19,16 @@
             <p><strong>Content:</strong> {{ todo.todo_content }}</p>
         
             <script>
-                function redirectToDelete(todoId) {
-                    window.location.href = `{{ url_for('delete_todo', todo_id=todo._id) }}`;
-                }
-
                 function redirectToEdit(todoId) {
                     const editUrl = `{{ url_for('edit_todo', todo_id=todo._id) }}`;
                     window.location.href = editUrl;
                 }
             </script>
-
-            <input type="button" value="Edit" onclick="redirectToEdit('{{ todo.id }}')" />
-            <input type="button" value="Delete" onclick="redirectToDelete('{{ todo.id }}')" />
+            <input type="button" value="Edit" onclick="redirectToEdit('{{ todo._id }}')" />
+            <form action="{{ url_for('delete_todo', todo_id=todo._id) }}" method="POST" style="display:inline;">
+                <input type="submit" value="Delete" />
+            </form>
+            
             
         </div>
         
