--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,11 +14,11 @@
             </header>
 
             <h2>Edit Task</h2>
-            <form method="POST" action="{{ url_for('edit_todo', todo_id=todo.id) }}">
+            <form method="POST" action="{{ url_for('edit_todo', todo_id=todo._id) }}">
                 <!--preshow existing value -->
                 <input type="text" id="list_title" name="list_title" value="{{ todo.list_title }}" required />
                 <br />
-                <input type="datetime-local" id="time" name="time" value="{{ todo.time | datetimeformat }}" />
+                <input type="datetime-local" id="time" name="time" value="{{ todo.time }}" />
                 <br />
                 <textarea id="todo_content" name="todo_content" required>{{ todo.todo_content }}</textarea>
                 <br />
