--- a/templates/main.html
+++ b/templates/main.html
@@ -10,8 +10,11 @@
     <body>
         <div class="container">
             <header>
-                <h1>To-Do List App</h1>
+                <a href="{{ url_for('main') }}">
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo">
+                </a>
             </header>
+            <h1><a href="{{ url_for('main') }}" style="color: inherit; text-decoration: none;">To-Do List</a></h1>
             <nav>
                 <a href="{{ url_for('search') }}">Search</a>
                 <a href="{{ url_for('view_all') }}">Check All Tasks</a>
